manifest/ingress-dev.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-provider-back-service-gateway-guardiacivil
  namespace: civil-guard
  annotations: 
    kubernetes.io/ingress.class: nginx    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.org/proxy-connect-timeout: "60s"
    nginx.org/proxy-read-timeout: "60s"
    nginx.ingress.kubernetes.io/configuration-snippet: | 
          more_clear_headers "Server";    
spec:
  tls:
    - hosts:
        - provider-guardiacivil.demo.kaytrust.id
      secretName: guardiacivil-provider-demo-kaytrust.id-secret
  rules:
    - host: provider-guardiacivil.demo.kaytrust.id
      http:
        paths:
        - path: /
          backend:
            serviceName: back-authgateway-gc-service
            servicePort: 8085
